# ai-webhook-ingestion-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
apps/entities/: admin.py  apps.py  models.py  repositories.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
apps/entities/migrations/: 0001_initial.py
apps/ingestion/: admin.py  apps.py  models.py  repositories.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
apps/ingestion/migrations/: 0001_initial.py
apps/normalization/: admin.py  apps.py  models.py  prompts.py  repositories.py  schemas.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
apps/normalization/migrations/: 0001_initial.py
config/: logging.py  middleware.py  observability.py  settings.py  urls.py
samples/: globalfreightpay_invoice.json  maersk_shipment.json  marine_advisory_unclassified.json  one_shipment.json
scripts/: send_webhooks.py  start-web.sh  start-worker.sh
