[project]
name = "ai-webhook-platform"
version = "0.1.0"
description = "Production-grade AI webhook ingestion and normalization platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.1,<6.0",
  "djangorestframework>=3.15.2",
  "drf-spectacular>=0.28.0",
  "django-environ>=0.11.2",
  "psycopg[binary]>=3.2.1",
  "celery[redis]>=5.4.0",
  "redis>=5.0.8",
  "openai>=1.54.0",
  "gunicorn>=23.0.0",
  "whitenoise>=6.8.2",
  "python-json-logger>=2.0.7",
  "django-cors-headers>=4.6.0",
  "opentelemetry-api>=1.29.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-django>=4.9.0",
  "ruff>=0.7.1"
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ", "RUF"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
